--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -13,5 +13,17 @@ code {
 }
 
 .bg{
+  color: white;
   text-align: center;
+  width : 100%;
+  height : 100%;
+  background-position: 50%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url('https://www.petanos.com/wp-content/uploads/2019/08/Background-Wallpaper-Cat-Turkish-Angora-White-face-Cute-mixed-color-eyes-scaled.jpg');
+  
+}
+.bg2{
+  padding: 50px;
+  background-color: rgba(0, 0, 0, 0.671);
 }
